# mcp-registry

./: README.md  environment.yml  pyproject.toml  requirements.txt
mcp-registry-frontend/: package-lock.json  package.json
mcp-registry-frontend/src/app/: globals.css  layout.tsx  page.tsx
mcp-registry-frontend/src/app/server/[id]/: page.tsx
mcp-registry-frontend/src/components/filters/: SearchFilters.tsx
mcp-registry-frontend/src/components/home/: HeroSection.tsx  ServersList.tsx  StatsSection.tsx
mcp-registry-frontend/src/components/layout/: Footer.tsx  Header.tsx
mcp-registry-frontend/src/components/providers/: QueryProvider.tsx
mcp-registry-frontend/src/components/servers/: ServerCard.tsx  ServerGrid.tsx  ServerGridSkeleton.tsx
mcp-registry-frontend/src/hooks/: useServers.ts
mcp-registry-frontend/src/lib/: api.ts  types.ts
src/mcp_registry/: __init__.py  main.py
src/mcp_registry.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mcp_registry/api/: router.py
src/mcp_registry/api/v0/: __init__.py  health.py  publish.py  servers.py
src/mcp_registry/auth/: __init__.py  base.py
src/mcp_registry/config/: __init__.py  settings.py
src/mcp_registry/database/: __init__.py  base.py  memory.py  mongo.py
src/mcp_registry/models/: __init__.py  server.py
src/mcp_registry/service/: __init__.py  registry.py
